[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-todo"
version = "0.2.0"
description = "In-memory task list for AI agents — zero dependencies, OpenAI function-calling ready"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "jayminwest" }]
keywords = ["ai", "agents", "todo", "task-list", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_todo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
